# scraping_pipeline

./: README.md  main.py  pyproject.toml
src/scraper/: crawler.py  crawler_builder.py  models.py
src/scraper/http/: httpx_fetcher.py  interface.py  rate_limiter.py
src/scraper/output/: interface.py  jsonl_writer.py
src/scraper/parsers/: basic_html_parser.py  interface.py
src/scraper/text_processing/: basic_text_processor.py  interface.py
src/scraper/traversal/: breadth_first_traversal.py  interface.py
src/scraper/utils/: logging_config.py  urls.py
