[project]
name = "scraping-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pyright>=1.1.407",
]
