[project]
name = "scraping-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "pydantic>=2.12.5",
]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[tool.setuptools.packages.find]
where= ["src"] 

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pyright>=1.1.407",
]
